--- a/site/src/comp/style/AuthPage.css
+++ b/site/src/comp/style/AuthPage.css
@@ -36,6 +36,7 @@
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  width: 93%;
 }
 
 .auth-form button {
@@ -47,6 +48,7 @@
   cursor: pointer;
   margin-bottom: 10px;
   font-size: 16px;
+  width: 100%;
 }
 
 .auth-form button:hover {
