--- a/site/src/comp/style/ManagerPage.css
+++ b/site/src/comp/style/ManagerPage.css
@@ -18,6 +18,7 @@ h1 {
 p {
   text-align: center;
   color: #ffffff;
+  font-size: 20px;
 }
   
   form {
@@ -33,16 +34,18 @@ p {
     max-width: 400px; 
     margin-bottom: 10px;
     padding: 10px;
+    border-radius: 5px;
   }
   
   button {
     padding: 10px 20px;
     background-color: #007bff;
-    color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin-bottom: 10px;
+    margin: 10px auto 10px;
+    color: white;
+    font-size: 15px;
   }
   
   button:hover {
@@ -65,7 +68,7 @@ p {
   td {
     padding: 10px;
     border: 1px solid #ddd;
-    text-align: left;
+    text-align: center;
     color: white;
     box-sizing: border-box;
     white-space: nowrap; /* Запрещает перенос строк */
@@ -75,7 +78,7 @@ p {
   }
   
   th {
-    background-color: #734b4b;
+    background-color: #2F3D5C;
   }
 
   body {
